modules/jekyll-devbox-module/jekyll-nodes.tf

data "aws_ami" "amazon-linux-2" {  
  most_recent = true
  
  owners = ["amazon"]
 
  filter {
    name   = "name"
    values = ["amzn2-ami-hvm*"]
  }
  
  filter {
    name   = "architecture"
    values = ["x86_64*"]
  }

}  

resource "aws_instance" "jekyll-host" {
  depends_on = [aws_internet_gateway.jekyll-host]
  ami                         = data.aws_ami.amazon-linux-2.id
  associate_public_ip_address = true
  instance_type               = "t2.micro"
  key_name                    = var.name_of_ssh_key
  user_data_base64 = base64encode(local.jekyll-host-userdata)
  source_dest_check           = false
  subnet_id = aws_subnet.jekyll-host.id
  vpc_security_group_ids = [aws_security_group.jekyll-hosts.id]

  connection {
    type        = "ssh"
    user        = "ec2-user"
    private_key = file("${var.path_to_ssh_keys}${var.name_of_ssh_key}.pem")
    host = self.public_ip
  }

  # Copies the pem file
  provisioner "file" {
    source      = "${var.path_to_ssh_keys}kubernetes-host.pem"
    destination = "/home/ec2-user/.ssh/kubernetes-host.pem"
  }

  timeouts {
    create = "60m"
    update = "60m"
    delete = "60m"
  }
  
  tags = { Name = "Jekyll-Host" }
}
